--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,11 +35,56 @@ nav#menu a {
   text-decoration: none;
   color: var(--texto-inverso);
   font-weight: 600;
-  padding:15px;
+  padding:12px 15px;
   border-radius: 5px;
   transition: background-color 0.5s color 0.5s ;
 }
 nav#menu a:hover {
   background-color: var(--destaque-inverso);
   color: var(--destaque);
+}
+main{
+  display: grid;
+  grid-template-columns: auto 90vw auto;
+  gap: 20px;
+  margin-top: 20px;
+}
+section#ficha{
+  background-color: var(--fundo-card);
+  padding: 20px;
+  border-radius: 8px;
+  grid-column: 2;
+}
+section#ficha img.foto{
+  width: 200px;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 50%;
+  border: 5px solid var(--fundo-card);
+  outline: 5px solid var(--destaque);
+  display: block;
+  margin: auto;
+  margin-bottom: 15px;
+}
+section#ficha h1{
+  color: var(--destaque);
+  margin: 15px 0;
+  font-size: 1.5em;
+  text-align: left;
+}
+div#social{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.6em;
+  gap: 1em;
+  margin-top: 15px;
+}
+div#social a{
+  color: var(--destaque);
+  transition: color 0.5s;
+}
+div#social a:hover{
+  color: var(--destaque-inverso);
 }
